[package]
name = "sub-triage-logs"
authors = ["Alexandru Vasile <alexandru.vasile@parity.io>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
log = "0.4"
tracing-subscriber = "0.3"
chrono = "0.4"
reqwest = "0.12"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "macros", "sync", "parking_lot"] }

flate2 = "1.0.29"
tar = "0.4"

regex = "1.10"
